--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "nodemon": "^2.0.22"
   },
   "dependencies": {
+    "mysql": "^2.18.1",
     "nodemailer": "^6.9.1",
     "upper-case": "^2.0.2"
   }
